--- a/main.html
+++ b/main.html
@@ -8,6 +8,37 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form action = "#" method = "post">
+		<label for = "name">Name*</label><br>
+		<input type = "text" id = "name" name = "name" required><br>
+
+		<label for = "email">Email*</label><br>
+		<input type = "email" id = "email" name = "email" required><br>
+
+	   <label>Gender*</label><br>
+	   <input type="radio" id="male" name="gender" value="male" required>
+	   <label for="html">Male</label><br>
+	   <input type="radio" id="female" name="gender" value="female" required>
+	   <label for="css">Female</label><br>
+
+	   <label for = "car">Car Brands</label>
+	   <select id = "car" name = "car"><br>
+			<option>BMW</option>
+			<option>Audi</option>
+			<option>Mercedez</option>
+		</select><br>
+
+		<label for = "carage">Car Age</label><br>
+		<input type = "number" id = "carage" name = "carage" required><br>
+
+		<label for = "dop" >Date of Purchase</label>
+		<input type = "date" id = "dop" name = "dop" required><br>
+
+		<label for = "password">Password*</label><br>
+		<input type = "password" id = "password" name = "password" required><br>
+
+		<button type = "submit">Submit Button</button>
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
