--- a/main.html
+++ b/main.html
@@ -17,9 +17,9 @@
 
 	   <label>Gender*</label><br>
 	   <input type="radio" id="male" name="gender" value="male" required>
-	   <label for="html">Male</label><br>
+	   <label for="male">Male</label><br>
 	   <input type="radio" id="female" name="gender" value="female" required>
-	   <label for="css">Female</label><br>
+	   <label for="female">Female</label><br>
 
 	   <label for = "car">Car Brands</label>
 	   <select id = "car" name = "car"><br>
