--- a/main.html
+++ b/main.html
@@ -21,8 +21,8 @@
 	   <input type="radio" id="female" name="gender" value="female" required>
 	   <label for="female">Female</label><br>
 
-	   <label for = "select#cars">Car Brands</label>
-	   <select id = "select#cars" name = "select#cars"><br>
+	   <label for = "cars">Car Brands</label>
+	   <select id = "cars" name = "cars"><br>
 			<option>BMW</option>
 			<option>Audi</option>
 			<option>Mercedez</option>
